--- a/style2.css
+++ b/style2.css
@@ -103,7 +103,8 @@
   font-size:21px;
   height:3px;
   line-height:30px;
-  margin-bottom:5px;
+  margin-top:10px;
+  margin-bottom:10px;
   text-size-adjust:100%;
   -webkit-print-color-adjust:exact;
   -webkit-tap-highlight-color: rgba(67, 63, 64, 0);
@@ -140,7 +141,7 @@
 }
 
 .employer-title {
-  padding: 5px;
+  margin: 10px 10px 0px 10px;
   border-collapse:collapse;
   box-sizing:border-box;
   color:rgb(0, 0, 0);
@@ -158,7 +159,6 @@
   text-align:start;
   text-size-adjust:100%;
   white-space:normal;
-  width:240.5px;
   -webkit-border-horizontal-spacing:0px;
   -webkit-border-vertical-spacing:0px;
   -webkit-print-color-adjust:exact;
@@ -166,7 +166,7 @@
 }
 
 .location {
-  padding: 5px 15px;
+  padding: 5px 15px 5px 40px;
   border-collapse:collapse;
   box-sizing:border-box;
   color:rgb(0, 0, 0);
@@ -221,7 +221,7 @@
 }
 
 .footer-space {
-  padding: 20px;
+  padding: 5px;
   /*border: 1px solid black;
 */}
 
