--- a/style2.css
+++ b/style2.css
@@ -242,10 +242,36 @@
   margin: 15px -33px;
 }
 
+.date-range-div {
+  padding-top: 3px;
+}
+
+.image-container-0 {
+  display: none;
+}
+
+.image-container-1 {
+  position: absolute;
+  width: 100%;
+}
+
+.image-holder-0 {
+  background: center url(sample-map.jpg);
+  background-size: cover;
+  border: black solid 1px;
+  margin: 60px 4px;
+  height: 191px;
+  width: 260px;
+}
+
 .image-holder-1 {
   background: center url(sample-map.jpg);
   background-size: cover;
   border: black solid 1px;
   margin: 60px 4px;
   height: 191px;
+  width: 260px;
+  margin-bottom: 0px;
+  margin-top: 93px;
+  /*display: none;*/
 }
