--- a/style2.css
+++ b/style2.css
@@ -251,8 +251,7 @@
 }
 
 .image-container-1 {
-  position: absolute;
-  width: 100%;
+  text-align: right;
 }
 
 .image-holder-0 {
@@ -268,10 +267,39 @@
   background: center url(sample-map.jpg);
   background-size: cover;
   border: black solid 1px;
-  margin: 60px 4px;
   height: 191px;
   width: 260px;
-  margin-bottom: 0px;
-  margin-top: 93px;
-  /*display: none;*/
+  display: inline-block;
+}
+
+@media (min-width: 768px) {
+  .image-container-1 {
+    position: relative;
+  }
+}
+
+@media (min-width: 992px) {
+  .image-container-1 {
+    width: 98%;
+    position: absolute;
+    margin: 60px 4px;
+    margin-bottom: 0px;
+    margin-top: 6em;
+  }
+}
+
+@media (min-width: 1200px) {
+    .image-container-1 {
+    width: 90%;
+  }
+}
+
+@media print {
+  .image-container-1 {
+    width: 98%;
+    position: absolute;
+    margin: 60px 4px;
+    margin-bottom: 0px;
+    margin-top: 6em;
+  }
 }
