--- a/style2.css
+++ b/style2.css
@@ -303,3 +303,52 @@
     margin-top: 6em;
   }
 }
+
+
+
+
+
+
+
+.image-container-2 {
+  text-align: right;
+}
+
+.image-holder-2 {
+    background: center url(planes-over-gulf.png) no-repeat;
+    background-size: cover;
+    border: black solid 1px;
+    height: 4em;
+    width: 260px;
+    display: inline-block;
+    margin: 1.2em;
+}
+
+@media (min-width: 768px) {
+  .image-container-2 {
+    position: relative;
+  }
+}
+
+@media (min-width: 992px) {
+  .image-container-2 {
+    width: 98%;
+    position: absolute;
+  }
+}
+
+@media (min-width: 1200px) {
+    .image-container-2 {
+    width: 90%;
+  }
+}
+
+@media print {
+  .image-container-2 {
+    width: 98%;
+    position: absolute;
+    margin: 60px 4px;
+    margin-bottom: 0px;
+    margin-top: 6em;
+  }
+}
