Style2 is broken.

--- a/css/style2.css
+++ b/css/style2.css
@@ -121,7 +121,7 @@
   color:rgb(0, 0, 0);
   display:contents;
   font-family:Raleway;
-  font-size:medium;
+  font-size:x-large;
   font-style:normal;
   font-variant-caps:normal;
   font-variant-east-asian:normal;
